[package]
name = "citrea-sequencer"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

version = { workspace = true }
publish = false
readme = "README.md"
resolver = "2"

[dependencies]
# 3rd-party deps
alloy-rlp = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
backoff = { workspace = true }
borsh = { workspace = true }
chrono = { workspace = true }
digest = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
hyper = { workspace = true }
jsonrpsee = { workspace = true, features = ["http-client", "server", "client"] }
parking_lot = { workspace = true }
rs_merkle = { workspace = true }
schnellru = "0.2.1"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }

reth-chainspec = { workspace = true }
reth-db = { workspace = true }
reth-primitives = { workspace = true }
reth-provider = { workspace = true }
reth-rpc-eth-types = { workspace = true }
reth-rpc-types = { workspace = true }
reth-rpc-types-compat = { workspace = true }
reth-tasks = { workspace = true }
reth-transaction-pool = { workspace = true }
reth-trie = { workspace = true }
revm = { workspace = true }

# Sovereign SDK deps
soft-confirmation-rule-enforcer = { path = "../soft-confirmation-rule-enforcer", features = ["native"] }
sov-accounts = { path = "../sovereign-sdk/module-system/module-implementations/sov-accounts", default-features = false }
sov-db = { path = "../sovereign-sdk/full-node/db/sov-db" }
sov-modules-api = { path = "../sovereign-sdk/module-system/sov-modules-api", default-features = false }
sov-modules-rollup-blueprint = { path = "../sovereign-sdk/module-system/sov-modules-rollup-blueprint" }
sov-modules-stf-blueprint = { path = "../sovereign-sdk/module-system/sov-modules-stf-blueprint" }
sov-rollup-interface = { path = "../sovereign-sdk/rollup-interface", features = ["native"] }
sov-state = { path = "../sovereign-sdk/module-system/sov-state" }
sov-stf-runner = { path = "../sovereign-sdk/full-node/sov-stf-runner" }

# Citrea Deps
citrea-common = { path = "../common" }
citrea-evm = { path = "../evm", features = ["native"] }
citrea-primitives = { path = "../primitives" }
citrea-stf = { path = "../citrea-stf", features = ["native"] }
node-configs = { path = "../node-configs" }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }

[features]
default = []
local = []
