[package]
name = "shared-backup-db"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

version = { workspace = true }
readme = "README.md"
publish = false
resolver = "2"

[dependencies]
anyhow = { workspace = true }
postgres = "0.19.7"
deadpool = "0.12.0"
deadpool-postgres = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]

[features]
default = []
test-utils = []
