[package]
name = "shared-backup-db"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

version = { workspace = true }
readme = "README.md"
publish = false
resolver = "2"

[dependencies]
deadpool-postgres = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
postgres-types = { workspace = true, features = ["with-serde_json-1"] }

sov-rollup-interface = { path = "../sovereign-sdk/rollup-interface" }

[dev-dependencies]

[features]
default = []
test-utils = []
