[package]
name = "shared-backup-db"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

version = { workspace = true }
publish = false
readme = "README.md"
resolver = "2"

[dependencies]
deadpool-postgres = { workspace = true }
postgres-types = { workspace = true, features = ["with-serde_json-1"] }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

sov-rollup-interface = { path = "../sovereign-sdk/rollup-interface" }

[dev-dependencies]

[features]
default = []
test-utils = []
