[package]
name = "soft-confirmation-rule-enforcer"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

version = { workspace = true }
readme = "README.md"
publish = false
resolver = "2"

[dependencies]
sov-modules-api = { path = "../sovereign-sdk/module-system/sov-modules-api", version = "0.3" }
sov-state = { path = "../sovereign-sdk/module-system/sov-state", version = "0.3" }

sov-rollup-interface = { path = "../sovereign-sdk/rollup-interface" }


borsh = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
jsonrpsee = { workspace = true, features = [
    "macros",
    "client-core",
    "server",
], optional = true }

[dev-dependencies]
sov-mock-da = { path = "../sovereign-sdk/adapters/mock-da", features = [
    "native",
] }
# TODO ERCE: move these to dev dependencies after build.
tempfile = { workspace = true }
sov-prover-storage-manager = { path = "../sovereign-sdk/full-node/sov-prover-storage-manager", features = [
    "test-utils",
] }
lazy_static = "1.4.0"


[features]
default = []
# native = ["sov-modules-api/native", "jsonrpsee"]
native = ["jsonrpsee"]
serde = []
