[package]
name = "soft-confirmation-rule-enforcer"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

version = { workspace = true }
publish = false
readme = "README.md"
resolver = "2"

[dependencies]
sov-modules-api = { path = "../sovereign-sdk/module-system/sov-modules-api", default-features = false, features = ["macros"] }
sov-rollup-interface = { path = "../sovereign-sdk/rollup-interface" }
sov-state = { path = "../sovereign-sdk/module-system/sov-state" }

anyhow = { workspace = true }
borsh = { workspace = true }
jsonrpsee = { workspace = true, features = ["macros", "client-core", "server"], optional = true }
serde = { workspace = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
chrono = { workspace = true, default-features = true }
lazy_static = "1.5.0"
sov-mock-da = { path = "../sovereign-sdk/adapters/mock-da", features = ["native"] }
sov-prover-storage-manager = { path = "../sovereign-sdk/full-node/sov-prover-storage-manager", features = ["test-utils"] }
tempfile = { workspace = true }

[features]
default = []
native = ["sov-modules-api/native", "dep:tracing", "jsonrpsee"]
serde = []
