[package]
name = "chainway-sequencer"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

version = { workspace = true }
readme = "README.md"
publish = false
resolver = "2"

[dependencies]
sov-evm = { path = "../../module-system/module-implementations/sov-evm" }
sov-modules-rollup-blueprint = { path = "../../module-system/sov-modules-rollup-blueprint" }
bitcoin-da = { path = "../../adapters/bitcoin" }
anyhow = { workspace = true }
tracing = { workspace = true }
jsonrpsee = { workspace = true, features = ["http-client", "server"] }

futures = { workspace = true }

borsh = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

reth-primitives = { workspace = true }
reth-rpc-types = { workspace = true }
reth-transaction-pool = { workspace = true }
reth-provider = { workspace = true }
reth-tasks = { workspace = true }
reth-interfaces = { workspace = true }
reth-db = { workspace = true }
reth-trie = { workspace = true }
reth-rpc-types-compat = { workspace = true }

ethers = { workspace = true }
tokio = { workspace = true }
schnellru = "0.2.1"

sov-rollup-interface = { path = "../../rollup-interface", features = [
    "native",
] }

sov-stf-runner = { path = "../sov-stf-runner" }

sov-modules-stf-blueprint = { path = "../../module-system/sov-modules-stf-blueprint" }

citrea-stf = { path = "../../examples/demo-rollup/citrea-stf", features = ["native"] }
sov-modules-api = { path = "../../module-system/sov-modules-api" }
sov-accounts = { path = "../../module-system/module-implementations/sov-accounts" }
sov-state = { path = "../../module-system/sov-state" }

[dev-dependencies]
tokio = { workspace = true }


[features]
default = []
local = []
native = ["citrea-stf/native", "sov-evm/native"]
