[package]
name = "sequencer-client"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

version = { workspace = true }
readme = "README.md"
publish = false
resolver = "2"

[dependencies]
bitcoin-da = { path = "../../adapters/bitcoin" }
anyhow = { workspace = true }
tracing = { workspace = true }
jsonrpsee = { workspace = true, features = ["http-client", "server"] }


futures = { workspace = true }

borsh = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

reth-primitives = { workspace = true }
reth-rpc-types = { workspace = true }

ethers = { workspace = true }
tokio = { workspace = true }
schnellru = "0.2.1"


[dev-dependencies]
tokio = { workspace = true }


[features]
default = []
local = []
native = []
