[package]
name = "sequencer-client"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

version = { workspace = true }
readme = "README.md"
publish = false
resolver = "2"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
jsonrpsee = { workspace = true, features = ["http-client", "server"] }

serde = { workspace = true }
serde_json = { workspace = true }

ethers = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }


[features]
default = []
local = []
native = []
