[package]
name = "sovereign-sdk-fuzz"
version = "0.5.0-rc.1"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"
tempfile = "3"
rand = "0.8"

# Sovereign-maintained dependencies.
sov-modules-api = { path = "../module-system/sov-modules-api", features = [
    "arbitrary",
    "native",
] }
sov-accounts = { path = "../module-system/module-implementations/sov-accounts", features = [
    "arbitrary",
    "native",
] }
sov-bank = { path = "../module-system/module-implementations/sov-bank", features = [
    "native",
] }
sov-state = { path = "../module-system/sov-state" }
sov-prover-storage-manager = { path = "../full-node/sov-prover-storage-manager", features = [
    "test-utils",
] }

# Prevent this from interfering with workspaces.
[workspace]
members = ["."]

[[bin]]
name = "parse_address"
path = "fuzz_targets/parse_address.rs"
test = false
doc = false

[[bin]]
name = "address_bech_32_parse_serde"
path = "fuzz_targets/address_bech_32_parse_serde.rs"
test = false
doc = false

[[bin]]
name = "address_bech_32_try_from_bytes"
path = "fuzz_targets/address_bech_32_try_from_bytes.rs"
test = false
doc = false

[[bin]]
name = "bank_call"
path = "fuzz_targets/bank_call.rs"
test = false
doc = false

[[bin]]
name = "bank_parse_call_message"
path = "fuzz_targets/bank_parse_call_message.rs"
test = false
doc = false

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
ed25519-dalek = { git = "https://github.com/risc0/curve25519-dalek", tag = "curve25519-4.1.2-risczero.0" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
